# py-gitcrypt

./: .gitignore  Dockerfile  cm-toolkit.py  pyproject.toml
commands/: version.py
