[tool.poetry]
name = "cloudmanager-python"
version = "0.1.0"
description = ""
authors = ["Chris Maki <chris.maki@orencosoftware.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
